<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart"
    android:visibility="visible"
    android:longClickable="false"
    android:background="@color/white">

    <TextView
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/welcome_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_help"
        android:id="@+id/button_help"
        android:layout_gravity="right|bottom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_make"
        android:id="@+id/button_make"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_leave"
        android:id="@+id/button_leave"
        android:layout_gravity="center_horizontal|bottom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_info"
        android:id="@+id/button_info"
        android:layout_gravity="left|bottom"/>

</FrameLayout>