<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/game_name"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@color/black"
        android:text="@string/game_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_welcome"
        android:id="@+id/text_add"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@color/black"
        android:layout_below="@+id/game_name"
        android:layout_toLeftOf="@+id/button_play" />

    <EditText
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/default_name"
        android:ems="10"
        android:id="@+id/text_player_name"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_below="@+id/text_add"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/button_add"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_below="@+id/text_player_name"
        android:layout_alignLeft="@+id/text_add"
        android:layout_alignStart="@+id/text_add" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/button_play"
        android:layout_gravity="right|bottom"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:id="@+id/button_remove"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_above="@android:id/list"
        android:layout_alignRight="@+id/text_add"
        android:layout_alignEnd="@+id/text_add" />

    <ListView
        android:layout_width="223dp"
        android:layout_height="233dp"
        android:id="@android:id/list"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="@color/black"
        android:choiceMode="singleChoice"
        android:longClickable="true"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_add"
        android:layout_alignParentBottom="true" />

</RelativeLayout>