<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_make"
            android:id="@+id/title_make"
            android:layout_gravity="center_horizontal|top"
            android:textColor="@color/black"
            android:layout_marginTop="38dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game_name"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/game_name"
            android:inputType="text"
            android:textColor="@color/black"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_info"
        android:id="@+id/button_info"
        android:layout_gravity="left|bottom"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:text="@string/button_make"
        android:id="@+id/button_make"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:id="@+id/button_clear"
        android:layout_gravity="right|bottom"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/game_name"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@color/black"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/title_make"
        android:layout_alignLeft="@+id/button_make"
        android:layout_alignStart="@+id/button_make" />

    <EditText
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/score_limit"
        android:layout_gravity="right|bottom"
        android:text="@string/score_limit"
        android:editable="true"
        android:textColor="@color/black"
        android:layout_above="@+id/button_make"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score_limit"
        android:id="@+id/text_score_limit"
        android:layout_gravity="right|bottom"
        android:textColor="@color/black"
        android:layout_above="@+id/score_limit"
        android:layout_alignLeft="@+id/score_limit"
        android:layout_alignStart="@+id/score_limit" />

    <EditText
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/score_increment"
        android:text="@string/score_increment"
        android:layout_gravity="right|center_vertical"
        android:editable="true"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/start_score"
        android:layout_alignLeft="@+id/text_score_limit"
        android:layout_alignStart="@+id/text_score_limit" />

    <TextView
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score_increment"
        android:id="@+id/text_increments"
        android:layout_gravity="right|center_vertical"
        android:textColor="@color/black"
        android:layout_alignBaseline="@+id/start_score_view"
        android:layout_alignBottom="@+id/start_score_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/turn_limit"
        android:layout_gravity="left|bottom"
        android:text="@string/turn_limit"
        android:editable="true"
        android:textColor="@color/black"
        android:layout_above="@+id/button_make"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/turn_limit"
        android:id="@+id/text_turn_limit"
        android:layout_gravity="left|bottom"
        android:textColor="@color/black"
        android:layout_above="@+id/turn_limit"
        android:layout_alignRight="@+id/turn_limit"
        android:layout_alignEnd="@+id/turn_limit" />

    <EditText
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/start_score"
        android:layout_gravity="left|center_vertical"
        android:text="@string/start_score"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/text_turn_limit"
        android:layout_alignEnd="@+id/text_turn_limit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/start_score"
        android:textColor="@color/black"
        android:id="@+id/start_score_view"
        android:layout_gravity="left|center_vertical"
        android:layout_above="@+id/start_score"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_score_limit"
        android:id="@+id/is_score_limit"
        android:textColor="@color/black"
        android:checked="false"
        android:layout_above="@+id/text_score_limit"
        android:layout_alignRight="@+id/score_limit"
        android:layout_alignEnd="@+id/score_limit" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_turn_limit"
        android:id="@+id/is_turn_limit"
        android:textColor="@color/black"
        android:checked="false"
        android:layout_above="@+id/text_turn_limit" />

</RelativeLayout>